styles/scrollbar.css
/* Let's get this party started */
textarea::-webkit-scrollbar {
    width: 12px;
}
 
/* Track */
textarea::-webkit-scrollbar-track {
    border: 1px solid #ccc;
}
 
/* Handle */
textarea::-webkit-scrollbar-thumb {
    background-color: #ccc;
}
textarea::-webkit-scrollbar-thumb:window-inactive {
    background-color: #bebebe;
}

